logout commit 08/09
