# swagger/swagger.json
@@ -636,6 +636,39 @@
 				"deprecated": false
 			}
 		},
+		"/updateProfilePic": {
+			"post": {
+				"tags": [
+					"Manage Profile"
+				],
+				"summary": "Update Profile Picture",
+				"description": "Update profile picture",
+				"requestBody": {
+					"description": "",
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"profile-pic": {
+										"type": "string",
+										"format": "binary"
+									}
+								}
+							}
+						}
+					},
+					"required": true
+				},
+				"responses": {
+					"200": {
+						"description": "User profile picture updated",
+						"headers": {}
+					}
+				},
+				"deprecated": false
+			}
+		},
 		"/getCustAddress": {
 			"get": {
 				"tags": [
@@ -817,8 +850,7 @@
 						"headers": {}
 					}
 				},
-				"deprecated": false,
-				"security": []
+				"deprecated": false
 			}
 		},
 		"/filterCommonProducts": {
@@ -875,8 +907,7 @@
 						"headers": {}
 					}
 				},
-				"deprecated": false,
-				"security": []
+				"deprecated": false
 			}
 		},
 		"/getProductDetails/{id}&{color}": {
@@ -1262,12 +1293,13 @@
 									"seller": {
 										"type": "string"
 									},
-									"images": [
-										{
-											"type": "File",
-											"collectionFormat": "multi"
+									"images": {
+										"type": "array",
+										"items": {
+											"type": "string",
+											"format": "binary"
 										}
-									],
+									},
 									"description": {
 										"type": "string"
 									},
@@ -1295,6 +1327,63 @@
 				"responses": {
 					"200": {
 						"description": "Product has been added to Neostore successfully",
+						"headers": {}
+					}
+				},
+				"deprecated": false,
+				"security": []
+			}
+		},
+		"/addProductImages/{id}": {
+			"post": {
+				"tags": [
+					"Admin Module"
+				],
+				"summary": "Add new images for an existing product in Neostore",
+				"parameters": [
+					{
+						"name": "id",
+						"in": "path",
+						"description": "Product objectId",
+						"required": true,
+						"style": "simple",
+						"schema": {
+							"type": "string",
+							"example": ""
+						}
+					}
+				],
+				"requestBody": {
+					"description": "upload atleat 2 images of the product",
+					"content": {
+						"multipart/form-data": {
+							"schema": {
+								"type": "object",
+								"properties": {
+									"productName": {
+										"type": "string",
+										"required": true
+									},
+									"color": {
+										"type": "string",
+										"required": true
+									},
+									"images": {
+										"type": "array",
+										"items": {
+											"type": "string",
+											"format": "binary"
+										}
+									}
+								}
+							}
+						}
+					},
+					"required": true
+				},
+				"responses": {
+					"200": {
+						"description": "Product images has been added to Neostore successfully",
 						"headers": {}
 					}
 				},
@@ -1331,7 +1420,7 @@
 					}
 				},
 				"deprecated": false,
-				"security":[]
+				"security": []
 			}
 		},
 		"/getProductCategories": {
@@ -1347,7 +1436,7 @@
 					}
 				},
 				"deprecated": false,
-				"security":[]
+				"security": []
 			}
 		},
 		"/addProductColors": {
@@ -1379,7 +1468,7 @@
 					}
 				},
 				"deprecated": false,
-				"security":[]
+				"security": []
 			}
 		},
 		"/getProductColors": {
@@ -1395,7 +1484,7 @@
 					}
 				},
 				"deprecated": false,
-				"security":[]
+				"security": []
 			}
 		}
 	},
